--- a/desktop.ini
+++ b/desktop.ini
@@ -1,4 +1,4 @@
 [LocalizedFileNames]
-Screenshot 2025-10-13 094222.png=@Screenshot 2025-10-13 094222,0
-Screenshot 2025-10-13 094227.png=@Screenshot 2025-10-13 094227,0
-Screenshot 2025-10-13 094236.png=@Screenshot 2025-10-13 094236,0
+rock.png=@Screenshot 2025-10-13 094222,0
+paper.png=@Screenshot 2025-10-13 094227,0
+scissors.png=@Screenshot 2025-10-13 094236,0
